Fixed toast z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,7 +40,7 @@ app-header {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 100;
+  z-index: 98;
   background-color: $col-bg-main;
   >img:last-child {
     animation: rotateImage 4s infinite ease-in-out;
